--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-[8:47 PM, 3/10/2025] Lάʂγά🎼: <div style="text-align:center;margin-top: 40px;"><img style="width:20%;" src="shop.jpg"></div>
+<div style="text-align:center;margin-top: 40px;"><img style="width:20%;" src="shop.jpg"></div>
 
 <div style="text-align:center;margin-top: 40px;">
 <a style="padding-right: 20px;" href="home.html">Home</a>
